--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Black_Jack_Probability"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
         Title="MainWindow" Height="612" Width="1052">
     <Window.Resources>
@@ -15,7 +16,7 @@
             <ColumnDefinition Width="266*"/>
         </Grid.ColumnDefinitions>
         <Grid.Background>
-            <ImageBrush ImageSource="background.jpg"/>
+            <ImageBrush ImageSource="img/background.jpg"/>
         </Grid.Background>
         <Image  Name ="deck" HorizontalAlignment="Left" Height="120" Margin="78,207,0,0" VerticalAlignment="Top" Width="85" Grid.Column="1"/>
         <Grid x:Name="playerCards" HorizontalAlignment="Left" Height="264" Margin="374,290,0,0" VerticalAlignment="Top" Width="281">
@@ -24,8 +25,8 @@
         <Grid x:Name="dealerCards" HorizontalAlignment="Left" Height="280" Margin="249,10,0,0" VerticalAlignment="Top" Width="364"/>
         <Label x:Name="pPointsLabel" Content="0" HorizontalAlignment="Left" Margin="280,499,0,0" VerticalAlignment="Top" Height="55" Width="76" FontSize="18" BorderThickness="6,5,5,5" Background="{x:Null}" Foreground="#FFCAC0C0" />
         <Label Foreground="#FFCAC0C0" x:Name="dPointsLabel" Content="0" HorizontalAlignment="Left" Margin="618,10,0,0" VerticalAlignment="Top" Height="56" Width="86" FontSize="18"/>
-        <Button x:Name="hitBt" Content="Hit" HorizontalAlignment="Left" Margin="280,464,0,0" VerticalAlignment="Top" Width="76" Height="30" Click="hitBt_Click" Background="#FF9DFF5F" Foreground="#FF282121" BorderThickness="3" BorderBrush="#FF44690D" ClipToBounds="True"/>
-        <Button x:Name="holdBt" Content="Hold" HorizontalAlignment="Left" Margin="280,430,0,0" VerticalAlignment="Top" Width="76" RenderTransformOrigin="-0.095,-0.911" Height="29" Click="holdBt_Click" Background="#FF343131" Foreground="#FFD6B5B5" BorderThickness="3" OpacityMask="#FFD73D3D"/>
+        <Button x:Name="hitBt" Content="Hit" HorizontalAlignment="Left" Margin="280,464,0,0" VerticalAlignment="Top" Width="76" Height="30" Click="hitBt_Click" Background="#FF9DFF5F" Foreground="#FF282121" BorderThickness="3" BorderBrush="#FF44690D" ClipToBounds="True" IsEnabled="False"/>
+        <Button x:Name="holdBt" Content="Hold" HorizontalAlignment="Left" Margin="280,430,0,0" VerticalAlignment="Top" Width="76" RenderTransformOrigin="-0.095,-0.911" Height="29" Click="holdBt_Click" Background="#FF343131" Foreground="#FFD6B5B5" BorderThickness="3" OpacityMask="#FFD73D3D" IsEnabled="False"/>
         <Button x:Name="continueBt" Content="Continue" HorizontalAlignment="Left" Margin="60,264,0,0" VerticalAlignment="Top" Width="92" Height="42" Click="continueBt_Click" ScrollViewer.VerticalScrollBarVisibility="Hidden" Visibility="Hidden" BorderThickness="3" BorderBrush="#FF252020" Background="#FF1485FF"/>
         <Label Foreground="#FFCAC0C0" x:Name="resultLabel" Content="" HorizontalAlignment="Left" Margin="414,264,0,0" VerticalAlignment="Top" Width="199" FontSize="36"/>
         <Label Foreground="#FFCAC0C0" x:Name="winsLabel" Content="Wins: 0" Grid.Column="1" HorizontalAlignment="Left" Margin="0,464,0,0" VerticalAlignment="Top" Height="43" Width="88" FontSize="18"/>
@@ -39,6 +40,16 @@
         <Button x:Name="b50" Content="50$" HorizontalAlignment="Left" Margin="695,410,0,0" VerticalAlignment="Top" Width="30" Height="30" Click="b50_Click"/>
         <Button x:Name="b100" Content="100$" HorizontalAlignment="Left" Margin="730,429,0,0" VerticalAlignment="Top" Width="30" Height="30" Grid.ColumnSpan="2" Click="b100_Click"/>
         <Button x:Name="clearBt" Content="clear" HorizontalAlignment="Left" Margin="0,375,0,0" VerticalAlignment="Top" Width="30" Height="30" Click="clearBt_Click" Grid.Column="1" Background="#FFE02C2C" Foreground="#FFEEEAEA"/>
+        <Button x:Name="doubleBt" Content="Double" HorizontalAlignment="Left" Margin="199,464,0,0" VerticalAlignment="Top" Width="76" Height="30" Click="doubleBt_Click" Background="#FFEDFC7C" Foreground="#FF282121" BorderThickness="3" BorderBrush="#FF44690D" ClipToBounds="True" IsEnabled="False"/>
+        <Label x:Name="pLabel" Content="Probabilities:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="56" Width="192" FontSize="22" BorderThickness="6,5,5,5" Background="{x:Null}" Foreground="#FFCAC0C0" />
+        <Label x:Name="pLabel_Copy" Content="BJ in next round:" HorizontalAlignment="Left" Margin="10,66,0,0" VerticalAlignment="Top" Height="45" Width="163" FontSize="16" BorderThickness="6,5,5,5" Background="{x:Null}" Foreground="#FFCAC0C0" />
+        <Label x:Name="pLabel_Copy1" Content="Player busting:" HorizontalAlignment="Left" Margin="10,111,0,0" VerticalAlignment="Top" Height="45" Width="163" FontSize="16" BorderThickness="6,5,5,5" Background="{x:Null}" Foreground="#FFCAC0C0" />
+        <Label x:Name="pLabel_Copy2" Content="Players win on hold:" HorizontalAlignment="Left" Margin="10,161,0,0" VerticalAlignment="Top" Height="45" Width="163" FontSize="16" BorderThickness="6,5,5,5" Background="{x:Null}" Foreground="#FFCAC0C0" />
+        <Label x:Name="bjprLablel" Content="0%" HorizontalAlignment="Left" Margin="178,66,0,0" VerticalAlignment="Top" Height="45" Width="82" FontSize="16" BorderThickness="6,5,5,5" Background="{x:Null}" Foreground="#FFCAC0C0" />
+        <Label x:Name="pbLabel" Content="0%" HorizontalAlignment="Left" Margin="178,111,0,0" VerticalAlignment="Top" Height="45" Width="82" FontSize="16" BorderThickness="6,5,5,5" Background="{x:Null}" Foreground="#FFCAC0C0" />
+        <Label x:Name="pwLabel" Content="0%" HorizontalAlignment="Left" Margin="178,161,0,0" VerticalAlignment="Top" Height="45" Width="82" FontSize="16" BorderThickness="6,5,5,5" Background="{x:Null}" Foreground="#FFCAC0C0" />
+        <Label x:Name="pLabel_Copy3" Content="Draw on hold:" HorizontalAlignment="Left" Margin="10,206,0,0" VerticalAlignment="Top" Height="45" Width="163" FontSize="16" BorderThickness="6,5,5,5" Background="{x:Null}" Foreground="#FFCAC0C0" />
+        <Label x:Name="dpLabel" Content="0%" HorizontalAlignment="Left" Margin="178,206,0,0" VerticalAlignment="Top" Height="45" Width="82" FontSize="16" BorderThickness="6,5,5,5" Background="{x:Null}" Foreground="#FFCAC0C0" />
 
     </Grid>
 </Window>
